#layout barbershop-catalog: remove redundant br

--- a/catalog.html
+++ b/catalog.html
@@ -100,9 +100,7 @@
         </div>
         <div class="item-content">
           <h3 class="product-title">
-            <a href="#">Набор для путешествий<br>
-              <span>«Baxter of California»</span>
-            </a>
+            <a href="#">Набор для путешествий <span>«Baxter of California»</span></a>
           </h3>
 
           <div class="product-price-box">
@@ -120,9 +118,7 @@
         </div>
         <div class="item-content">
           <h3 class="product-title">
-            <a href="#">Увлажняющий кондиционер<br>
-              <span>«Baxter of California»</span>
-            </a>
+            <a href="#">Увлажняющий кондиционер <span>«Baxter of California»</span></a>
           </h3>
 
           <div class="product-price-box">
@@ -140,9 +136,7 @@
         </div>
         <div class="item-content">
           <h3 class="product-title">
-            <a href="#">Гель для волос<br>
-              <span>«Suavecito»</span>
-            </a>
+            <a href="#">Гель для волос <span>«Suavecito»</span></a>
           </h3>
 
           <div class="product-price-box">
@@ -160,9 +154,7 @@
         </div>
         <div class="item-content">
           <h3 class="product-title">
-            <a href="#">Глина для укладки волос<br>
-              <span>«American crew»</span>
-            </a>
+            <a href="#">Глина для укладки волос <span>«American crew»</span></a>
           </h3>
 
           <div class="product-price-box">
@@ -180,9 +172,7 @@
         </div>
         <div class="item-content">
           <h3 class="product-title">
-            <a href="#">Гель для волос<br>
-              <span>«American crew»</span>
-            </a>
+            <a href="#">Гель для волос <span>«American crew»</span></a>
           </h3>
 
           <div class="product-price-box">
@@ -200,9 +190,7 @@
         </div>
         <div class="item-content">
           <h3 class="product-title">
-            <a href="#">Набор для бритья<br>
-              <span>«Baxter of California»</span>
-            </a>
+            <a href="#">Набор для бритья <span>«Baxter of California»</span></a>
           </h3>
 
           <div class="product-price-box">
