--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <p>
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          Телефон: +7 (495) 666-02-66
+          Телефон: <a href="tel:+74956660266">+7 (495) 666-02-66</a>
         </p>
 
         <p>
