#font and img barbershop: connect images and fonts

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Барбершоп «Бородинский» - Набор для путешествий «Baxter of California»</title>
+  <link href="css/catalog-item-style.css" rel="stylesheet">
 </head>
 <body>
 <header class="main-header">
@@ -41,24 +42,27 @@
     <div class="product-images">
       <figure class="gallery-content">
         <a href="#">
-          <img src="http://placehold.it/460x498" width="460" height="498"
+          <img src="img/item-travel-kit-baxter-large-03.jpg" width="460" height="498"
                alt="Набор для путешествий «Baxter of California»">
         </a>
       </figure>
       <div class="product-thumbs">
         <div class="thumb">
           <a href="#">
-            <img src="http://placehold.it/140x149" width="140" height="149" alt="Набор для путешествий, фото 1">
+            <img src="img/item-travel-kit-baxter-small-01.jpg" width="140" height="149"
+                 alt="Набор для путешествий, фото 1">
           </a>
         </div>
         <div class="thumb">
           <a href="#">
-            <img src="http://placehold.it/140x149" width="140" height="149" alt="Набор для путешествий, фото 2">
+            <img src="img/item-travel-kit-baxter-small-02.jpg" width="140" height="149"
+                 alt="Набор для путешествий, фото 2">
           </a>
         </div>
         <div class="thumb">
           <a href="#">
-            <img src="http://placehold.it/140x149" width="140" height="149" alt="Набор для путешествий, фото 3">
+            <img src="img/item-travel-kit-baxter-small-03.jpg" width="140" height="149"
+                 alt="Набор для путешествий, фото 3">
           </a>
         </div>
       </div>
