--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Барбершоп «Бородинский» - Каталог</title>
+  <link href="css/catalog-style.css" rel="stylesheet">
 </head>
 <body>
 <header class="main-header">
@@ -94,7 +95,7 @@
       <article class="catalog-item">
         <div class="item-photo">
           <a class="product-photo">
-            <img src="http://placehold.it/220x165" width="220" height="165"
+            <img src="img/catalog-travel-kit-baxter.jpg" width="220" height="165"
                  alt="Набор для путешествий «Baxter of California»">
           </a>
         </div>
@@ -112,7 +113,7 @@
       <article class="catalog-item">
         <div class="item-photo">
           <a class="product-photo">
-            <img src="http://placehold.it/220x165" width="220" height="165"
+            <img src="img/catalog-conditioner-baxter.jpg" width="220" height="165"
                  alt="Увлажняющий кондиционер  «Baxter of California»">
           </a>
         </div>
@@ -130,7 +131,7 @@
       <article class="catalog-item">
         <div class="item-photo">
           <a class="product-photo">
-            <img src="http://placehold.it/220x165" width="220" height="165"
+            <img src="img/catalog-gel-suavecito.jpg" width="220" height="165"
                  alt="Гель для волос «Suavecito»">
           </a>
         </div>
@@ -148,7 +149,7 @@
       <article class="catalog-item">
         <div class="item-photo">
           <a class="product-photo">
-            <img src="http://placehold.it/220x165" width="220" height="165"
+            <img src="img/catalog-clay-american.jpg" width="220" height="165"
                  alt="Глина для укладки волос «American crew»">
           </a>
         </div>
@@ -166,7 +167,7 @@
       <article class="catalog-item">
         <div class="item-photo">
           <a class="product-photo">
-            <img src="http://placehold.it/220x165" width="220" height="165"
+            <img src="img/catalog-gel-american.jpg" width="220" height="165"
                  alt="Гель для волос «American crew»">
           </a>
         </div>
@@ -184,7 +185,7 @@
       <article class="catalog-item">
         <div class="item-photo">
           <a class="product-photo">
-            <img src="http://placehold.it/220x165" width="220" height="165"
+            <img src="img/catalog-shaving-kit-baxter.jpg" width="220" height="165"
                  alt="Набор для бритья «Baxter of California»">
           </a>
         </div>
