--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Барбершоп «Бородинский»</title>
+  <link href="css/index-style.css" rel="stylesheet">
 </head>
 <body>
 <header class="main-header">
@@ -25,7 +26,7 @@
 
 <div class="container">
   <div class="logo">
-    <img width="368" height="204" src="http://placehold.it/368x204" alt="Барбершоп «Бородинский»">
+    <img src="img/logo.png" width="368" height="204" alt="Барбершоп «Бородинский»">
   </div>
   <section class="featured-row clearfix">
     <div class="features-item">
@@ -64,7 +65,7 @@
 
       <div class="gallery">
         <figure class="gallery-content">
-          <img src="http://placehold.it/286x164" width="286" height="164" alt="фото">
+          <img src="img/gallery-content-01.jpg" width="286" height="164" alt="фото">
         </figure>
         <button class="btn gallery-prev">Назад</button>
         <button class="btn gallery-next">Вперед</button>
