--- a/catalog-item.html
+++ b/catalog-item.html
@@ -106,9 +106,9 @@
     </div>
     <div class="footer-social">
       <p>Давайте дружить!</p>
-      <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
-      <a href="#" class="social-btn social-btn-fb">Фейсбук</a>
-      <a href="#" class="social-btn social-btn-inst">Инстаграм</a>
+      <a href="#" class="social-btn social-btn-vk"><img src="img/icon-vk.png" width="25" height="16" alt="Вконтакте">Вконтакте</a>
+      <a href="#" class="social-btn social-btn-fb"><img src="img/icon-fb.png" width="12" height="22" alt="Фейсбук">Фейсбук</a>
+      <a href="#" class="social-btn social-btn-inst"><img src="img/icon-instagram.png" width="21" height="21" alt="Инстаграм">Инстаграм</a>
     </div>
     <div class="footer-copyright">
       Дизайн сайта:<br>
