#font and img barbershop: usage one style.css; include font using link

--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Барбершоп «Бородинский» - Каталог</title>
-  <link href="css/catalog-style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
 <header class="main-header">
@@ -114,7 +115,7 @@
         <div class="item-photo">
           <a class="product-photo">
             <img src="img/catalog-conditioner-baxter.jpg" width="220" height="165"
-                 alt="Увлажняющий кондиционер  «Baxter of California»">
+                 alt="Увлажняющий кондиционер «Baxter of California»">
           </a>
         </div>
         <div class="item-content">
