--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Барбершоп «Бородинский» - Набор для путешествий «Baxter of California»</title>
-  <link href="css/catalog-item-style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
 <header class="main-header">
