# grid barbershop: build grids; rename .container-main -> .main-container; wrap main part in index.html

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -39,7 +39,7 @@
     </nav>
   </header>
 
-  <div class="container-main clearfix">
+  <div class="main-container clearfix">
     <div class="product-images">
       <figure class="gallery-content">
         <a href="#">
