--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
     </nav>
   </header>
 
-  <div class="container-main clearfix">
+  <div class="main-container clearfix">
     <div class="filters">
       <form action="/echo" method="get">
         <div class="filter-manufactures">
