# grid barbershop: fix according to suggestions; link normalize.css; reset css rules for tags; remove redundant clearing; fix elements sizes; use inline-blocks for catalog; use to-left, to-right classes add clearfix for catalog

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Барбершоп «Бородинский» - Набор для путешествий «Baxter of California»</title>
+  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
@@ -40,7 +41,7 @@
   </header>
 
   <div class="main-container clearfix">
-    <div class="product-images">
+    <div class="product-images to-left">
       <figure class="gallery-content">
         <a href="#">
           <img src="img/item-travel-kit-baxter-large-03.jpg" width="460" height="498"
@@ -68,8 +69,8 @@
         </div>
       </div>
     </div>
-    <div class="product-content clearfix">
-      <div class="product-warehouse">
+    <div class="product-content clearfix to-right">
+      <div class="product-warehouse clearfix">
         <span class="product-stock">Есть в наличии</span>
 
         <div class="product-marking">Dexter-ae</div>
