--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Барбершоп «Бородинский» - Каталог</title>
+  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
@@ -92,7 +93,7 @@
       </form>
     </div>
 
-    <div class="catalog">
+    <div class="catalog clearfix">
       <article class="catalog-item">
         <div class="item-photo">
           <a class="product-photo">
