--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Барбершоп «Бородинский»</title>
+  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
@@ -47,7 +48,7 @@
       </div>
     </section>
     <div class="index-content clearfix">
-      <div class="content-column-left">
+      <div class="content-column to-left">
         <h2 class="content-column-title">Новости</h2>
         <ul>
           <li>
@@ -62,7 +63,7 @@
         </ul>
         <a href="#" class="btn">Все новости</a>
       </div>
-      <div class="content-column-right">
+      <div class="content-column to-right">
         <h2 class="content-column-title">Фотогалерея</h2>
 
         <div class="gallery">
@@ -75,7 +76,7 @@
       </div>
     </div>
     <div class="index-content clearfix">
-      <div class="content-column-left">
+      <div class="content-column to-left">
         <div class="main-contacts">
           <h2 class="content-column-title">Контактная информация</h2>
 
@@ -94,7 +95,7 @@
           <a href="#" class="btn">Обратная связь</a>
         </div>
       </div>
-      <div class="content-column-right">
+      <div class="content-column to-right">
         <div class="appointment-form">
           <h2 class="content-column-title">Записаться</h2>
 
