# grid barbershop: link normalize.css; layout navigation, breadcrumbs, paging;

--- a/catalog.html
+++ b/catalog.html
@@ -206,7 +206,7 @@
   </div>
 
   <footer class="container-footer clearfix">
-    <div class="pages">
+    <div class="pages"> <!-- [RB] как правильно выровнять по центру? -->
       <ul>
         <li><a href="#" class="btn page">1</a></li>
         <li class="active"><a href="#" class="btn page">2</a></li>
