# grid barbershop: fix footer; fix catalog gallery; shift pager under catalog

--- a/catalog.html
+++ b/catalog.html
@@ -202,19 +202,19 @@
           </div>
         </div>
       </article>
+      <footer class="container-footer clearfix">
+        <div class="pages">
+          <ul>
+            <li><a href="#" class="btn page">1</a></li>
+            <li class="active"><a href="#" class="btn page">2</a></li>
+            <li><a href="#" class="btn page">3</a></li>
+            <li><a href="#" class="btn page">4</a></li>
+          </ul>
+        </div>
+      </footer>
     </div>
   </div>
 
-  <footer class="container-footer clearfix">
-    <div class="pages"> <!-- [RB] как правильно выровнять по центру? -->
-      <ul>
-        <li><a href="#" class="btn page">1</a></li>
-        <li class="active"><a href="#" class="btn page">2</a></li>
-        <li><a href="#" class="btn page">3</a></li>
-        <li><a href="#" class="btn page">4</a></li>
-      </ul>
-    </div>
-  </footer>
 </div>
 
 <footer class="main-footer">
