--- a/catalog.html
+++ b/catalog.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <title>Барбершоп «Бородинский» - Каталог</title>
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700&amp;subset=latin,cyrillic-ext">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header class="main-header">
   <div class="container clearfix">
     <nav class="main-navigation">
       <ul>
-        <li class="active"><a href="#">Главная</a></li>
-        <li><a href="#">Информация</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="#">Прайс-лист</a></li>
-        <li><a href="#">Магазин</a></li>
-        <li><a href="#">Контакты</a></li>
+        <li class="active">
+          <a href="#">Главная</a>
+        </li>
+        <li>
+          <a href="#">Информация</a>
+        </li>
+        <li>
+          <a href="#">Новости</a>
+        </li>
+        <li>
+          <a href="text.html">Прайс-лист</a>
+        </li>
+        <li>
+          <a href="catalog.html">Магазин</a>
+        </li>
+        <li>
+          <a href="#">Контакты</a>
+        </li>
       </ul>
     </nav>
     <div class="user-block">
@@ -227,13 +240,13 @@
     </div>
     <div class="footer-social">
       <p>Давайте дружить!</p>
-      <a href="#" class="social-btn social-btn-vk"><img src="img/icon-vk.png" width="25" height="16" alt="Вконтакте">Вконтакте</a>
-      <a href="#" class="social-btn social-btn-fb"><img src="img/icon-fb.png" width="12" height="22" alt="Фейсбук">Фейсбук</a>
-      <a href="#" class="social-btn social-btn-inst"><img src="img/icon-instagram.png" width="21" height="21" alt="Инстаграм">Инстаграм</a>
+      <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
+      <a href="#" class="social-btn social-btn-fb">Фейсбук</a>
+      <a href="#" class="social-btn social-btn-inst">Инстаграм</a>
     </div>
     <div class="footer-copyright">
-      Дизайн сайта:<br>
-      <a href="http://htmlacademy.ru/" class="btn">htmlacademy.ru</a>
+      <p>Дизайн сайта:</p>
+      <a href="#" class="btn">htmlacademy.ru</a>
     </div>
   </div>
 </footer>
