--- a/catalog.html
+++ b/catalog.html
@@ -9,12 +9,12 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header class="main-header">
+<header class="main-header catalog-page">
   <div class="container clearfix">
     <nav class="main-navigation">
       <ul>
         <li class="active">
-          <a href="#">Главная</a>
+          <a href=".">Главная</a>
         </li>
         <li>
           <a href="#">Информация</a>
@@ -230,7 +230,7 @@
 
 </div>
 
-<footer class="main-footer">
+<footer class="main-footer catalog-page">
   <div class="container clearfix">
     <div class="footer-contacts">
       Барбершоп «Бородинский»<br>
