--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="main-navigation">
       <ul>
         <li class="active">
-          <a href="#">Главная</a>
+          <a href=".">Главная</a>
         </li>
         <li>
           <a href="#">Информация</a>
